# upload

./: .dockerignore  .gitignore  Dockerfile  README.md  api_key.py  app.py  docker-compose.yml  pyproject.toml
templates/: index.html
