[tool.poetry]
name = "upload"
version = "0.1.0"
description = "A simple web service for uploading and retrieving files with Flask."
authors = ["Nachtalb <na@nachtalb.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.14"
ruff-lsp = "^0.0.49"
mypy = "^1.8.0"
isort = "^5.13.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
preview = true
target-version = ["py311"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
show_error_codes = true
pretty = true
strict = true
